feat: Fix login issue of ACE (#19)

--- a/web/i18n/ar-TN/login.json
+++ b/web/i18n/ar-TN/login.json
@@ -109,6 +109,7 @@
   "webapp.noLoginMethod": "طريقة المصادقة غير مكونة لتطبيق الويب",
   "webapp.noLoginMethodTip": "يرجى الاتصال بمسؤول النظام لإضافة طريقة مصادقة.",
   "welcome": "👋 مرحبًا! يرجى تسجيل الدخول للبدء.",
+  "withAceDataCloud": "المتابعة مع Ace Data Cloud",
   "withGitHub": "المتابعة مع GitHub",
   "withGoogle": "المتابعة مع Google",
   "withSSO": "المتابعة مع SSO"
