--- a/web/i18n/en-US/login.json
+++ b/web/i18n/en-US/login.json
@@ -109,6 +109,7 @@
   "webapp.noLoginMethod": "Authentication method not configured for web app",
   "webapp.noLoginMethodTip": "Please contact the system admin to add an authentication method.",
   "welcome": "👋 Welcome! Please log in to get started.",
+  "withAceDataCloud": "Continue with Ace Data Cloud",
   "withGitHub": "Continue with GitHub",
   "withGoogle": "Continue with Google",
   "withSSO": "Continue with SSO"
