--- a/web/i18n/ru-RU/login.json
+++ b/web/i18n/ru-RU/login.json
@@ -109,6 +109,7 @@
   "webapp.noLoginMethod": "Метод аутентификации не настроен для веб-приложения",
   "webapp.noLoginMethodTip": "Пожалуйста, свяжитесь с администратором системы, чтобы добавить метод аутентификации.",
   "welcome": "Добро пожаловать в Dify, пожалуйста, войдите, чтобы продолжить.",
+  "withAceDataCloud": "Продолжить с Ace Data Cloud",
   "withGitHub": "Продолжить с GitHub",
   "withGoogle": "Продолжить с Google",
   "withSSO": "Продолжение работы с SSO"
