--- a/web/i18n/th-TH/login.json
+++ b/web/i18n/th-TH/login.json
@@ -109,6 +109,7 @@
   "webapp.noLoginMethod": "ไม่ได้กำหนดวิธีการตรวจสอบสิทธิ์สำหรับเว็บแอป",
   "webapp.noLoginMethodTip": "กรุณาติดต่อผู้ดูแลระบบเพื่อเพิ่มวิธีการตรวจสอบสิทธิ์.",
   "welcome": "👋 ยินดีต้อนรับสู่ Dify โปรดเข้าสู่ระบบเพื่อดําเนินการต่อ",
+  "withAceDataCloud": "ดําเนินการต่อด้วย Ace Data Cloud",
   "withGitHub": "ดําเนินการต่อด้วย GitHub",
   "withGoogle": "ดําเนินการต่อกับ Google",
   "withSSO": "ดําเนินการต่อด้วย SSO"
