--- a/web/i18n/uk-UA/login.json
+++ b/web/i18n/uk-UA/login.json
@@ -109,6 +109,7 @@
   "webapp.noLoginMethod": "Метод аутентифікації не налаштований для веб-додатку",
   "webapp.noLoginMethodTip": "Будь ласка, зв'яжіться з адміністратором системи, щоб додати метод автентифікації.",
   "welcome": "Ласкаво просимо до Dify, будь ласка, увійдіть, щоб продовжити.",
+  "withAceDataCloud": "Продовжити з Ace Data Cloud",
   "withGitHub": "Продовжити з GitHub",
   "withGoogle": "Продовжити з Google",
   "withSSO": "Продовжуйте працювати з SSW"
