--- a/web/i18n/pt-BR/login.json
+++ b/web/i18n/pt-BR/login.json
@@ -109,6 +109,7 @@
   "webapp.noLoginMethod": "Método de autenticação não configurado para o aplicativo web",
   "webapp.noLoginMethodTip": "Por favor, entre em contato com o administrador do sistema para adicionar um método de autenticação.",
   "welcome": "Bem-vindo ao Dify, faça login para continuar.",
+  "withAceDataCloud": "Continuar com Ace Data Cloud",
   "withGitHub": "Continuar com o GitHub",
   "withGoogle": "Continuar com o Google",
   "withSSO": "Continuar com SSO"
