--- a/web/i18n/zh-Hans/common.json
+++ b/web/i18n/zh-Hans/common.json
@@ -439,6 +439,10 @@
   "operation.downloadSuccess": "下载完毕",
   "operation.duplicate": "复制",
   "operation.edit": "编辑",
+  "operation.export": "导出",
+  "operation.exportFormat.csv": "CSV",
+  "operation.exportFormat.jsonl": "JSONL",
+  "operation.exporting": "导出中...",
   "operation.format": "格式化",
   "operation.getForFree": "免费获取",
   "operation.imageCopied": "图片已复制",
