--- a/web/i18n/en-US/workflow.json
+++ b/web/i18n/en-US/workflow.json
@@ -967,6 +967,7 @@
   "panel.scrollToSelectedNode": "Scroll to selected node",
   "panel.selectNextStep": "Select Next Step",
   "panel.startNode": "Start Node",
+  "panel.ungroup": "Ungroup",
   "panel.userInputField": "User Input Field",
   "publishLimit.startNodeDesc": "You’ve reached the limit of 2 triggers per workflow for this plan. Upgrade to publish this workflow.",
   "publishLimit.startNodeTitlePrefix": "Upgrade to",
