--- a/web/i18n/zh-Hant/workflow.json
+++ b/web/i18n/zh-Hant/workflow.json
@@ -964,6 +964,7 @@
   "panel.scrollToSelectedNode": "捲動至選取的節點",
   "panel.selectNextStep": "選擇下一個節點",
   "panel.startNode": "起始節點",
+  "panel.ungroup": "取消群組",
   "panel.userInputField": "用戶輸入字段",
   "publishLimit.startNodeDesc": "目前方案最多允許 2 個開始節點，升級後才能發布此工作流程。",
   "publishLimit.startNodeTitlePrefix": "升級以",
