refactor: stream export feedback data

--- a/web/i18n/en-US/app-log.json
+++ b/web/i18n/en-US/app-log.json
@@ -5,11 +5,14 @@
   "agentLogDetail.iteration": "Iteration",
   "agentLogDetail.iterations": "Iterations",
   "agentLogDetail.toolUsed": "Tool Used",
+  "batchAction.selected": "Selected",
   "dateFormat": "MM/DD/YYYY",
   "dateTimeFormat": "MM/DD/YYYY hh:mm:ss A",
   "description": "The logs record the running status of the application, including user inputs and AI replies.",
   "detail.annotationTip": "Improvements Marked by {{user}}",
   "detail.conversationId": "Conversation ID",
+  "detail.exportFeedback": "Export Feedback",
+  "detail.exportingFeedback": "Exporting...",
   "detail.loading": "loading",
   "detail.modelParams": "Model parameters",
   "detail.operation.addAnnotation": "Add Improvement",
