--- a/web/i18n/ar-TN/app-debug.json
+++ b/web/i18n/ar-TN/app-debug.json
@@ -177,6 +177,8 @@
   "feature.tools.tips": "توفر الأدوات طريقة استدعاء API قياسية، مع أخذ مدخلات المستخدم أو المتغيرات كمعلمات طلب للاستعلام عن البيانات الخارجية كسياق.",
   "feature.tools.title": "الأدوات",
   "feature.tools.toolsInUse": "{{count}} أدوات قيد الاستخدام",
+  "feature.videoUpload.description": "Enable Video will allow the model to process video files for transcription and analysis.",
+  "feature.videoUpload.title": "Video",
   "formattingChangedText": "سيؤدي تعديل التنسيق إلى إعادة تعيين منطقة التصحيح، هل أنت متأكد؟",
   "formattingChangedTitle": "تغيير التنسيق",
   "generate.apply": "تطبيق",
