--- a/web/i18n/fa-IR/app-debug.json
+++ b/web/i18n/fa-IR/app-debug.json
@@ -177,6 +177,8 @@
   "feature.tools.tips": "ابزارها یک روش استاندارد برای فراخوانی API فراهم می‌کنند و ورودی کاربر یا متغیرها را به عنوان پارامترهای درخواست برای پرس و جو داده‌های خارجی به عنوان زمینه می‌گیرند.",
   "feature.tools.title": "ابزارها",
   "feature.tools.toolsInUse": "{{count}} ابزار در حال استفاده",
+  "feature.videoUpload.description": "Enable Video will allow the model to process video files for transcription and analysis.",
+  "feature.videoUpload.title": "Video",
   "formattingChangedText": "با تغییر قالب بندی، ناحیه اشکال زدایی بازنشانی می شود، مطمئن هستید؟",
   "formattingChangedTitle": "قالب بندی تغییر کرد",
   "generate.apply": "درخواست",
