--- a/web/i18n/id-ID/app-debug.json
+++ b/web/i18n/id-ID/app-debug.json
@@ -177,6 +177,8 @@
   "feature.tools.tips": "Alat menyediakan metode panggilan API standar, mengambil input atau variabel pengguna sebagai parameter permintaan untuk mengkueri data eksternal sebagai konteks.",
   "feature.tools.title": "Perkakas",
   "feature.tools.toolsInUse": "{{count}} alat yang digunakan",
+  "feature.videoUpload.description": "Enable Video will allow the model to process video files for transcription and analysis.",
+  "feature.videoUpload.title": "Video",
   "formattingChangedText": "Memodifikasi pemformatan akan mengatur ulang area debug, apakah Anda yakin?",
   "formattingChangedTitle": "Pemformatan diubah",
   "generate.apply": "Berlaku",
