--- a/web/i18n/it-IT/app-debug.json
+++ b/web/i18n/it-IT/app-debug.json
@@ -177,6 +177,8 @@
   "feature.tools.tips": "Gli strumenti forniscono un metodo di chiamata API standard, prendendo input dell'utente o variabili come parametri di richiesta per interrogare dati esterni come contesto.",
   "feature.tools.title": "Strumenti",
   "feature.tools.toolsInUse": "{{count}} strumenti in uso",
+  "feature.videoUpload.description": "Enable Video will allow the model to process video files for transcription and analysis.",
+  "feature.videoUpload.title": "Video",
   "formattingChangedText": "Modificare il formato resetterà l'area di debug, sei sicuro?",
   "formattingChangedTitle": "Formato modificato",
   "generate.apply": "Applicare",
