--- a/web/i18n/ko-KR/app-debug.json
+++ b/web/i18n/ko-KR/app-debug.json
@@ -177,6 +177,8 @@
   "feature.tools.tips": "도구는 사용자 입력이나 변수를 요청 매개변수로 사용하여 외부 데이터를 컨텍스트로 쿼리하는 표준적인 API 호출 방법을 제공합니다.",
   "feature.tools.title": "도구",
   "feature.tools.toolsInUse": "{{count}}개의 도구가 사용 중",
+  "feature.videoUpload.description": "Enable Video will allow the model to process video files for transcription and analysis.",
+  "feature.videoUpload.title": "Video",
   "formattingChangedText": "포맷을 변경하면 디버그 영역이 재설정됩니다. 계속하시겠습니까?",
   "formattingChangedTitle": "포맷이 변경되었습니다",
   "generate.apply": "적용",
