--- a/web/i18n/ru-RU/app-debug.json
+++ b/web/i18n/ru-RU/app-debug.json
@@ -177,6 +177,8 @@
   "feature.tools.tips": "Инструменты предоставляют стандартный метод вызова API, принимая пользовательский ввод или переменные в качестве параметров запроса для запроса внешних данных в качестве контекста.",
   "feature.tools.title": "Инструменты",
   "feature.tools.toolsInUse": "{{count}} инструментов используется",
+  "feature.videoUpload.description": "Enable Video will allow the model to process video files for transcription and analysis.",
+  "feature.videoUpload.title": "Video",
   "formattingChangedText": "Изменение форматирования приведет к сбросу области отладки, вы уверены?",
   "formattingChangedTitle": "Форматирование изменено",
   "generate.apply": "Применить",
