--- a/web/i18n/sl-SI/app-debug.json
+++ b/web/i18n/sl-SI/app-debug.json
@@ -177,6 +177,8 @@
   "feature.tools.tips": "Orodja nudijo standardiziran način klicanja API-jev, pri čemer se uporabniški vnos ali spremenljivke uporabijo kot parametri za poizvedovanje zunanjih podatkov.",
   "feature.tools.title": "Orodja",
   "feature.tools.toolsInUse": "{{count}} orodij v uporabi",
+  "feature.videoUpload.description": "Enable Video will allow the model to process video files for transcription and analysis.",
+  "feature.videoUpload.title": "Video",
   "formattingChangedText": "Spreminjanje oblikovanja bo ponastavilo območje za odpravljanje napak, ste prepričani?",
   "formattingChangedTitle": "Spremenjeno oblikovanje",
   "generate.apply": "Uporabiti",
