--- a/web/i18n/tr-TR/app-debug.json
+++ b/web/i18n/tr-TR/app-debug.json
@@ -177,6 +177,8 @@
   "feature.tools.tips": "Araçlar, kullanıcı girişi veya değişkenleri istek parametreleri olarak alarak dış verileri bağlam olarak sorgulamak için standart bir API çağrı yöntemi sağlar.",
   "feature.tools.title": "Araçlar",
   "feature.tools.toolsInUse": "{{count}} araç kullanımda",
+  "feature.videoUpload.description": "Enable Video will allow the model to process video files for transcription and analysis.",
+  "feature.videoUpload.title": "Video",
   "formattingChangedText": "Biçimlendirmeyi değiştirmek hata ayıklama alanını sıfırlayacaktır, emin misiniz?",
   "formattingChangedTitle": "Biçimlendirme değiştirildi",
   "generate.apply": "Uygula",
