--- a/web/i18n/pl-PL/app-debug.json
+++ b/web/i18n/pl-PL/app-debug.json
@@ -177,8 +177,8 @@
   "feature.tools.tips": "Narzędzia zapewniają standardową metodę wywołania API, przyjmując dane wejściowe użytkownika lub zmienne jako parametry żądania do zapytania o dane zewnętrzne jako kontekst.",
   "feature.tools.title": "Narzędzia",
   "feature.tools.toolsInUse": "{{count}} narzędzi w użyciu",
-  "feature.videoUpload.description": "Enable Video will allow the model to process video files for transcription and analysis.",
-  "feature.videoUpload.title": "Video",
+  "feature.videoUpload.description": "Włączenie wideo pozwoli modelowi przetwarzać pliki wideo w celu transkrypcji i analizy.",
+  "feature.videoUpload.title": "Wideo",
   "formattingChangedText": "Modyfikacja formatowania zresetuje obszar debugowania, czy jesteś pewien?",
   "formattingChangedTitle": "Zmiana formatowania",
   "generate.apply": "Zastosować",
