--- a/web/i18n/pt-BR/app-debug.json
+++ b/web/i18n/pt-BR/app-debug.json
@@ -177,8 +177,8 @@
   "feature.tools.tips": "Tools provide a standard API call method, taking user input or variables as request parameters for querying external data as context.",
   "feature.tools.title": "Tools",
   "feature.tools.toolsInUse": "{{count}} tools in use",
-  "feature.videoUpload.description": "Enable Video will allow the model to process video files for transcription and analysis.",
-  "feature.videoUpload.title": "Video",
+  "feature.videoUpload.description": "Ativar o vídeo permitirá que o modelo processe arquivos de vídeo para transcrição e análise.",
+  "feature.videoUpload.title": "Vídeo",
   "formattingChangedText": "Modificar a formatação redefinirá a área de depuração, você tem certeza?",
   "formattingChangedTitle": "Formatação alterada",
   "generate.apply": "Aplicar",
