--- a/web/i18n/th-TH/app-debug.json
+++ b/web/i18n/th-TH/app-debug.json
@@ -177,8 +177,8 @@
   "feature.tools.tips": "เครื่องมือมีวิธีการเรียก API มาตรฐาน โดยใช้อินพุตหรือตัวแปรของผู้ใช้เป็นพารามิเตอร์คําขอสําหรับการสืบค้นข้อมูลภายนอกตามบริบท",
   "feature.tools.title": "เครื่อง มือ",
   "feature.tools.toolsInUse": "เครื่องมือ {{count}} ที่ใช้งาน",
-  "feature.videoUpload.description": "Enable Video will allow the model to process video files for transcription and analysis.",
-  "feature.videoUpload.title": "Video",
+  "feature.videoUpload.description": "การเปิดใช้งานวิดีโอจะอนุญาตให้โมเดลประมวลผลไฟล์วิดีโอสำหรับการถอดเสียงและการวิเคราะห์",
+  "feature.videoUpload.title": "วิดีโอ",
   "formattingChangedText": "การแก้ไขการจัดรูปแบบจะรีเซ็ตพื้นที่ดีบัก คุณแน่ใจหรือไม่?",
   "formattingChangedTitle": "การจัดรูปแบบเปลี่ยนไป",
   "generate.apply": "ใช้",
