--- a/web/i18n/uk-UA/app-debug.json
+++ b/web/i18n/uk-UA/app-debug.json
@@ -177,8 +177,8 @@
   "feature.tools.tips": "Інструменти надають стандартний метод виклику API, приймаючи вхідні дані користувача або змінні як параметри запиту для запиту зовнішніх даних як контексту.",
   "feature.tools.title": "Інструменти",
   "feature.tools.toolsInUse": "Використовується інструментів: {{count}}",
-  "feature.videoUpload.description": "Enable Video will allow the model to process video files for transcription and analysis.",
-  "feature.videoUpload.title": "Video",
+  "feature.videoUpload.description": "Увімкнення відео дозволить моделі обробляти відеофайли для транскрипції та аналізу.",
+  "feature.videoUpload.title": "Відео",
   "formattingChangedText": "Змінення форматування призведе до скидання області налагодження. Ви впевнені?",
   "formattingChangedTitle": "Змінено форматування",
   "generate.apply": "Застосовувати",
