--- a/web/i18n/zh-Hans/workflow.json
+++ b/web/i18n/zh-Hans/workflow.json
@@ -3,6 +3,7 @@
   "blocks.answer": "直接回复",
   "blocks.assigner": "变量赋值",
   "blocks.code": "代码执行",
+  "blocks.command": "命令执行",
   "blocks.datasource": "数据源",
   "blocks.datasource-empty": "空数据源",
   "blocks.document-extractor": "文档提取器",
@@ -33,6 +34,7 @@
   "blocksAbout.answer": "定义一个聊天对话的回复内容",
   "blocksAbout.assigner": "变量赋值节点用于向可写入变量（例如会话变量）进行变量赋值。",
   "blocksAbout.code": "执行一段 Python 或 NodeJS 代码实现自定义逻辑",
+  "blocksAbout.command": "在子进程中执行 shell 命令",
   "blocksAbout.datasource": "数据源节点",
   "blocksAbout.datasource-empty": "空数据源占位符",
   "blocksAbout.document-extractor": "用于将用户上传的文档解析为 LLM 便于理解的文本内容。",
@@ -296,6 +298,7 @@
   "errorMsg.authRequired": "请先授权",
   "errorMsg.fieldRequired": "{{field}} 不能为空",
   "errorMsg.fields.code": "代码",
+  "errorMsg.fields.command": "命令",
   "errorMsg.fields.model": "模型",
   "errorMsg.fields.rerankModel": "Rerank 模型",
   "errorMsg.fields.variable": "变量名",
@@ -405,6 +408,12 @@
   "nodes.code.outputVars": "输出变量",
   "nodes.code.searchDependencies": "搜索依赖",
   "nodes.code.syncFunctionSignature": "同步函数签名至代码",
+  "nodes.command.command": "命令",
+  "nodes.command.commandPlaceholder": "输入要执行的命令，例如 ls -la",
+  "nodes.command.seconds": "秒",
+  "nodes.command.timeout": "超时时间",
+  "nodes.command.workingDirectory": "工作目录",
+  "nodes.command.workingDirectoryPlaceholder": "输入工作目录路径（可选）",
   "nodes.common.errorHandle.defaultValue.desc": "当发生异常时，指定默认输出内容。",
   "nodes.common.errorHandle.defaultValue.inLog": "节点异常，根据默认值输出。",
   "nodes.common.errorHandle.defaultValue.output": "输出默认值",
