feat: new runtime options

--- a/web/i18n/en-US/app.json
+++ b/web/i18n/en-US/app.json
@@ -159,6 +159,7 @@
   "newApp.completionShortDescription": "AI assistant for text generation tasks",
   "newApp.completionUserDescription": "Quickly build an AI assistant for text generation tasks with simple configuration.",
   "newApp.dropDSLToCreateApp": "Drop DSL file here to create app",
+  "newApp.enableSandboxRuntime": "Enable sandbox runtime (supports Command node)",
   "newApp.forAdvanced": "FOR ADVANCED USERS",
   "newApp.forBeginners": "More basic app types",
   "newApp.foundResult": "{{count}} Result",
@@ -173,6 +174,9 @@
   "newApp.noTemplateFoundTip": "Try searching using different keywords.",
   "newApp.optional": "Optional",
   "newApp.previewDemo": "Preview demo",
+  "newApp.runtimeLabel": "Runtime",
+  "newApp.runtimeOptionClassical": "Classical",
+  "newApp.runtimeOptionNew": "Recommend",
   "newApp.showTemplates": "I want to choose from a template",
   "newApp.startFromBlank": "Create from Blank",
   "newApp.startFromTemplate": "Create from Template",
