--- a/web/i18n/ja-JP/app.json
+++ b/web/i18n/ja-JP/app.json
@@ -173,6 +173,9 @@
   "newApp.noTemplateFoundTip": "別のキーワードを使用して検索してみてください。",
   "newApp.optional": "任意",
   "newApp.previewDemo": "デモをプレビュー",
+  "newApp.runtimeLabel": "Runtime",
+  "newApp.runtimeOptionClassical": "Classical",
+  "newApp.runtimeOptionNew": "推奨",
   "newApp.showTemplates": "テンプレートから選択したい",
   "newApp.startFromBlank": "最初から作成",
   "newApp.startFromTemplate": "テンプレートから作成",
