--- a/web/i18n/zh-Hans/app.json
+++ b/web/i18n/zh-Hans/app.json
@@ -173,6 +173,9 @@
   "newApp.noTemplateFoundTip": "请尝试使用不同的关键字进行搜索。",
   "newApp.optional": "可选",
   "newApp.previewDemo": "预览 Demo",
+  "newApp.runtimeLabel": "Runtime",
+  "newApp.runtimeOptionClassical": "Classical",
+  "newApp.runtimeOptionNew": "推荐",
   "newApp.showTemplates": "我想从范例模板中选择",
   "newApp.startFromBlank": "创建空白应用",
   "newApp.startFromTemplate": "从应用模板创建",
