feat: command node output variables

--- a/web/i18n/en-US/workflow.json
+++ b/web/i18n/en-US/workflow.json
@@ -410,6 +410,10 @@
   "nodes.code.syncFunctionSignature": "Sync function signature to code",
   "nodes.command.command": "Command",
   "nodes.command.commandPlaceholder": "Enter the command to execute, e.g., ls -la",
+  "nodes.command.outputVars.exitCode": "Exit code of the command",
+  "nodes.command.outputVars.pid": "Process ID of the command",
+  "nodes.command.outputVars.stderr": "Standard error from command execution",
+  "nodes.command.outputVars.stdout": "Standard output from command execution",
   "nodes.command.seconds": "seconds",
   "nodes.command.timeout": "Timeout",
   "nodes.command.workingDirectory": "Working Directory",
