feat: llm node support tools

--- a/web/i18n/en-US/workflow.json
+++ b/web/i18n/en-US/workflow.json
@@ -126,6 +126,7 @@
   "common.currentDraftUnpublished": "Current Draft Unpublished",
   "common.currentView": "Current View",
   "common.currentWorkflow": "Current Workflow",
+  "common.data": "Data",
   "common.debugAndPreview": "Preview",
   "common.disconnect": "Disconnect",
   "common.duplicate": "Duplicate",
