--- a/web/i18n/zh-Hans/workflow.json
+++ b/web/i18n/zh-Hans/workflow.json
@@ -126,6 +126,7 @@
   "common.currentDraftUnpublished": "当前草稿未发布",
   "common.currentView": "当前视图",
   "common.currentWorkflow": "整个工作流",
+  "common.data": "数据",
   "common.debugAndPreview": "预览",
   "common.disconnect": "断开连接",
   "common.duplicate": "复制",
