feat: sandbox provider configuration

--- a/web/i18n/zh-Hans/common.json
+++ b/web/i18n/zh-Hans/common.json
@@ -549,6 +549,47 @@
   "provider.saveFailed": "API 密钥保存失败",
   "provider.validatedError": "校验失败：",
   "provider.validating": "验证密钥中...",
+  "sandboxProvider.config": "配置",
+  "sandboxProvider.configModal.apiEndpoint": "API 端点",
+  "sandboxProvider.configModal.apiEndpointPlaceholder": "https://api.example.com/v1",
+  "sandboxProvider.configModal.apiKey": "API Key / 密钥",
+  "sandboxProvider.configModal.apiKeyPlaceholder": "输入您的 API Key",
+  "sandboxProvider.configModal.cancel": "取消",
+  "sandboxProvider.configModal.confirm": "确认",
+  "sandboxProvider.configModal.dockerImage": "Docker 镜像",
+  "sandboxProvider.configModal.dockerImagePlaceholder": "ubuntu:latest",
+  "sandboxProvider.configModal.dockerSock": "Docker Socket",
+  "sandboxProvider.configModal.dockerSockPlaceholder": "unix:///var/run/docker.sock",
+  "sandboxProvider.configModal.e2bApiUrl": "E2B API 地址",
+  "sandboxProvider.configModal.e2bApiUrlPlaceholder": "https://api.e2b.app",
+  "sandboxProvider.configModal.e2bTemplate": "E2B 模板",
+  "sandboxProvider.configModal.e2bTemplatePlaceholder": "code-interpreter-v1",
+  "sandboxProvider.configModal.readDoc": "查看文档",
+  "sandboxProvider.configModal.revoke": "撤销",
+  "sandboxProvider.configModal.save": "保存",
+  "sandboxProvider.configModal.title": "配置 - {{provider}}",
+  "sandboxProvider.connected": "已连接",
+  "sandboxProvider.currentProvider": "当前供应商",
+  "sandboxProvider.daytona.description": "为 AI 代理提供安全的沙箱云环境。了解更多",
+  "sandboxProvider.daytona.label": "Daytona",
+  "sandboxProvider.docker.description": "为 AI 代理提供安全的沙箱云环境。了解更多",
+  "sandboxProvider.docker.label": "Docker",
+  "sandboxProvider.e2b.description": "为 AI 代理提供安全的沙箱云环境。了解更多",
+  "sandboxProvider.e2b.label": "E2B",
+  "sandboxProvider.enable": "启用",
+  "sandboxProvider.local.description": "此模式将主机作为代理提供，不建议在生产环境中使用。",
+  "sandboxProvider.local.label": "本地",
+  "sandboxProvider.managedBySaas": "由 SaaS 管理",
+  "sandboxProvider.noPermission": "请联系工作空间管理员进行更改。",
+  "sandboxProvider.notConfigured": "未配置",
+  "sandboxProvider.otherProvider": "其他供应商",
+  "sandboxProvider.switchModal.cancel": "取消",
+  "sandboxProvider.switchModal.confirm": "切换供应商",
+  "sandboxProvider.switchModal.confirmText": "您即将将活动沙箱供应商切换为 {{provider}}。",
+  "sandboxProvider.switchModal.title": "切换活动供应商？",
+  "sandboxProvider.switchModal.warning": "对运行中的代理的影响",
+  "sandboxProvider.switchModal.warningDesc": "切换供应商将影响所有新启动的代理任务。当前运行的会话可能会被中断。",
+  "sandboxProvider.title": "沙箱供应商",
   "settings.account": "我的账户",
   "settings.accountGroup": "通用",
   "settings.apiBasedExtension": "API 扩展",
@@ -560,6 +601,7 @@
   "settings.members": "成员",
   "settings.plugin": "插件",
   "settings.provider": "模型供应商",
+  "settings.sandboxProvider": "沙箱供应商",
   "settings.workplaceGroup": "工作空间",
   "tag.addNew": "创建新标签",
   "tag.addTag": "添加标签",
