--- a/web/i18n/en-US/common.json
+++ b/web/i18n/en-US/common.json
@@ -549,6 +549,49 @@
   "provider.saveFailed": "Save api key failed",
   "provider.validatedError": "Validation failed: ",
   "provider.validating": "Validating key...",
+  "sandboxProvider.config": "Config",
+  "sandboxProvider.configModal.apiEndpoint": "API Endpoint",
+  "sandboxProvider.configModal.apiEndpointPlaceholder": "https://api.example.com/v1",
+  "sandboxProvider.configModal.apiKey": "API Key / Secret",
+  "sandboxProvider.configModal.apiKeyPlaceholder": "Enter your API key",
+  "sandboxProvider.configModal.baseWorkingPath": "Base Working Path",
+  "sandboxProvider.configModal.baseWorkingPathPlaceholder": "/tmp/sandbox",
+  "sandboxProvider.configModal.cancel": "Cancel",
+  "sandboxProvider.configModal.confirm": "Confirm",
+  "sandboxProvider.configModal.dockerImage": "Docker Image",
+  "sandboxProvider.configModal.dockerImagePlaceholder": "ubuntu:latest",
+  "sandboxProvider.configModal.dockerSock": "Docker Socket",
+  "sandboxProvider.configModal.dockerSockPlaceholder": "unix:///var/run/docker.sock",
+  "sandboxProvider.configModal.e2bApiUrl": "E2B API URL",
+  "sandboxProvider.configModal.e2bApiUrlPlaceholder": "https://api.e2b.app",
+  "sandboxProvider.configModal.e2bTemplate": "E2B Template",
+  "sandboxProvider.configModal.e2bTemplatePlaceholder": "code-interpreter-v1",
+  "sandboxProvider.configModal.readDoc": "Read Documentation",
+  "sandboxProvider.configModal.revoke": "Revoke",
+  "sandboxProvider.configModal.save": "Save",
+  "sandboxProvider.configModal.title": "Configure - {{provider}}",
+  "sandboxProvider.connected": "Connected",
+  "sandboxProvider.currentProvider": "Current Provider",
+  "sandboxProvider.daytona.description": "Secure sandboxed cloud environments for AI agents. learn more",
+  "sandboxProvider.daytona.label": "Daytona",
+  "sandboxProvider.docker.description": "Secure sandboxed cloud environments for AI agents. learn more",
+  "sandboxProvider.docker.label": "Docker",
+  "sandboxProvider.e2b.description": "Secure sandboxed cloud environments for AI agents. learn more",
+  "sandboxProvider.e2b.label": "E2B",
+  "sandboxProvider.enable": "Enable",
+  "sandboxProvider.local.description": "This mode will provide the host machine as an agent, and its use in production is not recommended.",
+  "sandboxProvider.local.label": "Local",
+  "sandboxProvider.managedBySaas": "Managed by SaaS",
+  "sandboxProvider.noPermission": "Contact the workspace administrator to make changes.",
+  "sandboxProvider.notConfigured": "Not Configured",
+  "sandboxProvider.otherProvider": "Other Provider",
+  "sandboxProvider.switchModal.cancel": "Cancel",
+  "sandboxProvider.switchModal.confirm": "Switch Provider",
+  "sandboxProvider.switchModal.confirmText": "You are about to switch the active sandbox provider to {{provider}}.",
+  "sandboxProvider.switchModal.title": "Switch Active Provider?",
+  "sandboxProvider.switchModal.warning": "Impact on running agents",
+  "sandboxProvider.switchModal.warningDesc": "Switching the provider will affect all newly started agent tasks. Currently running sessions might be interrupted.",
+  "sandboxProvider.title": "Sandbox Providers",
   "settings.account": "My account",
   "settings.accountGroup": "GENERAL",
   "settings.apiBasedExtension": "API Extension",
@@ -560,6 +603,7 @@
   "settings.members": "Members",
   "settings.plugin": "Plugins",
   "settings.provider": "Model Provider",
+  "settings.sandboxProvider": "Sandbox Provider",
   "settings.workplaceGroup": "WORKSPACE",
   "tag.addNew": "Add new tag",
   "tag.addTag": "Add tags",
