feat(llm-panel): collapse panel with advanced settings and max iterations
- Introduced a collapsible section for advanced settings in the LLM panel.
- Added Max Iterations component with conditional rendering based on the new hideMaxIterations prop.
- Updated context field and vision configuration to be part of the advanced settings.
- Added new translation key for advanced settings in the workflow localization file.

--- a/web/i18n/en-US/workflow.json
+++ b/web/i18n/en-US/workflow.json
@@ -634,6 +634,7 @@
   "nodes.listFilter.outputVars.result": "Filter result",
   "nodes.listFilter.selectVariableKeyPlaceholder": "Select sub variable key",
   "nodes.llm.addMessage": "Add Message",
+  "nodes.llm.advancedSettings": "Advanced Settings",
   "nodes.llm.context": "context",
   "nodes.llm.contextTooltip": "You can import Knowledge as context",
   "nodes.llm.files": "Files",
