--- a/web/i18n/en-US/app-log.json
+++ b/web/i18n/en-US/app-log.json
@@ -28,10 +28,10 @@
   "filter.annotation.all": "All",
   "filter.annotation.annotated": "Annotated Improvements ({{count}} items)",
   "filter.annotation.not_annotated": "Not Annotated",
-  "filter.archived.button": "View archived records",
+  "filter.archived.button": "Archived records",
   "filter.archived.export": "Export",
   "filter.archived.exportFailed": "Export task failed. Please try again.",
-  "filter.archived.list.description": "This view will list archived workflow logs for export.",
+  "filter.archived.list.description": "Archived records display logs older than 3 months, which may be delayed by one day.",
   "filter.archived.list.title": "Archived records",
   "filter.archived.managerOnly": "Only workspace owner or admin can export logs.",
   "filter.archived.upgrade.description": "Upgrade your plan to view archived records.",
