--- a/web/i18n/en-US/app-log.json
+++ b/web/i18n/en-US/app-log.json
@@ -34,8 +34,8 @@
   "filter.archived.list.description": "Archived records display logs older than 3 months, which may be delayed by one day.",
   "filter.archived.list.title": "Archived records",
   "filter.archived.managerOnly": "Only workspace owner or admin can export logs.",
-  "filter.archived.upgrade.description": "Upgrade your plan to view archived records.",
-  "filter.archived.upgrade.title": "Upgrade required",
+  "filter.archived.upgrade.description": "Your current plan retains workflow logs for up to 30 days and does not support downloading the full archived records.",
+  "filter.archived.upgrade.title": "Upgrade to unlock unlimited workflow logs and full archived records download",
   "filter.ascending": "ascending",
   "filter.descending": "descending",
   "filter.period.allTime": "All time",
