feat: update agent functionality in mixed-variable text input

--- a/web/i18n/en-US/workflow.json
+++ b/web/i18n/en-US/workflow.json
@@ -204,6 +204,7 @@
   "common.runApp": "Run App",
   "common.runHistory": "Run History",
   "common.running": "Running",
+  "common.searchAgent": "Search agent",
   "common.searchVar": "Search variable",
   "common.setVarValuePlaceholder": "Set variable",
   "common.showRunHistory": "Show Run History",
@@ -215,6 +216,7 @@
   "common.variableNamePlaceholder": "Variable name",
   "common.versionHistory": "Version History",
   "common.viewDetailInTracingPanel": "View details",
+  "common.viewInternals": "View internals",
   "common.viewOnly": "View Only",
   "common.viewRunHistory": "View run history",
   "common.workflowAsTool": "Workflow as Tool",
@@ -764,6 +766,7 @@
   "nodes.tool.inputVars": "Input Variables",
   "nodes.tool.insertPlaceholder1": "Type or press",
   "nodes.tool.insertPlaceholder2": "insert variable",
+  "nodes.tool.insertPlaceholder3": "add agent",
   "nodes.tool.outputVars.files.title": "tool generated files",
   "nodes.tool.outputVars.files.transfer_method": "Transfer method.Value is  remote_url or local_file",
   "nodes.tool.outputVars.files.type": "Support type. Now only support image",
