--- a/web/i18n/ja-JP/workflow.json
+++ b/web/i18n/ja-JP/workflow.json
@@ -202,6 +202,7 @@
   "common.runApp": "アプリを実行",
   "common.runHistory": "実行履歴",
   "common.running": "実行中",
+  "common.searchAgent": "エージェントを検索",
   "common.searchVar": "変数を検索",
   "common.setVarValuePlaceholder": "変数値を設定",
   "common.showRunHistory": "実行履歴を表示",
@@ -213,6 +214,7 @@
   "common.variableNamePlaceholder": "変数名を入力",
   "common.versionHistory": "バージョン履歴",
   "common.viewDetailInTracingPanel": "詳細を表示",
+  "common.viewInternals": "内部を表示",
   "common.viewOnly": "閲覧のみ",
   "common.viewRunHistory": "実行履歴を表示",
   "common.workflowAsTool": "ワークフローをツールとして公開する",
@@ -762,6 +764,7 @@
   "nodes.tool.inputVars": "入力変数",
   "nodes.tool.insertPlaceholder1": "タイプするか押してください",
   "nodes.tool.insertPlaceholder2": "変数を挿入する",
+  "nodes.tool.insertPlaceholder3": "エージェントを追加",
   "nodes.tool.outputVars.files.title": "ツールが生成したファイル",
   "nodes.tool.outputVars.files.transfer_method": "転送方法。値は remote_url または local_file です",
   "nodes.tool.outputVars.files.type": "サポートタイプ。現在は画像のみサポートされています",
