--- a/web/i18n/zh-Hant/workflow.json
+++ b/web/i18n/zh-Hant/workflow.json
@@ -202,6 +202,7 @@
   "common.runApp": "運行",
   "common.runHistory": "運行歷史",
   "common.running": "運行中",
+  "common.searchAgent": "搜索代理",
   "common.searchVar": "搜索變數",
   "common.setVarValuePlaceholder": "設置變數值",
   "common.showRunHistory": "顯示運行歷史",
@@ -213,6 +214,7 @@
   "common.variableNamePlaceholder": "變數名",
   "common.versionHistory": "版本歷史",
   "common.viewDetailInTracingPanel": "查看詳細信息",
+  "common.viewInternals": "查看內部",
   "common.viewOnly": "只讀",
   "common.viewRunHistory": "查看運行歷史",
   "common.workflowAsTool": "發佈為工具",
@@ -762,6 +764,7 @@
   "nodes.tool.inputVars": "輸入變數",
   "nodes.tool.insertPlaceholder1": "輸入或按壓",
   "nodes.tool.insertPlaceholder2": "插入變數",
+  "nodes.tool.insertPlaceholder3": "添加代理",
   "nodes.tool.outputVars.files.title": "工具生成的文件",
   "nodes.tool.outputVars.files.transfer_method": "傳輸方式。值為 remote_url 或 local_file",
   "nodes.tool.outputVars.files.type": "支持類型。現在只支持圖片",
