--- a/web/i18n/zh-Hans/workflow.json
+++ b/web/i18n/zh-Hans/workflow.json
@@ -202,6 +202,7 @@
   "common.runApp": "运行",
   "common.runHistory": "运行历史",
   "common.running": "运行中",
+  "common.searchAgent": "搜索代理",
   "common.searchVar": "搜索变量",
   "common.setVarValuePlaceholder": "设置变量值",
   "common.showRunHistory": "显示运行历史",
@@ -213,6 +214,7 @@
   "common.variableNamePlaceholder": "变量名",
   "common.versionHistory": "版本历史",
   "common.viewDetailInTracingPanel": "查看详细信息",
+  "common.viewInternals": "查看内部",
   "common.viewOnly": "只读",
   "common.viewRunHistory": "查看运行历史",
   "common.workflowAsTool": "发布为工具",
@@ -762,6 +764,7 @@
   "nodes.tool.inputVars": "输入变量",
   "nodes.tool.insertPlaceholder1": "键入",
   "nodes.tool.insertPlaceholder2": "插入变量",
+  "nodes.tool.insertPlaceholder3": "添加代理",
   "nodes.tool.outputVars.files.title": "工具生成的文件",
   "nodes.tool.outputVars.files.transfer_method": "传输方式。值为 remote_url 或 local_file",
   "nodes.tool.outputVars.files.type": "支持类型。现在只支持图片",
