--- a/web/i18n/zh-Hans/workflow.json
+++ b/web/i18n/zh-Hans/workflow.json
@@ -171,6 +171,7 @@
   "common.needConnectTip": "此节点尚未连接到其他节点",
   "common.needOutputNode": "必须添加输出节点",
   "common.needStartNode": "必须添加至少一个开始节点",
+  "common.noAgentNodes": "没有可用的代理节点",
   "common.noHistory": "没有历史版本",
   "common.noVar": "没有变量",
   "common.notRunning": "尚未运行",
