feat(ui): change runtime selection component

--- a/web/i18n/en-US/app.json
+++ b/web/i18n/en-US/app.json
@@ -174,9 +174,12 @@
   "newApp.noTemplateFoundTip": "Try searching using different keywords.",
   "newApp.optional": "Optional",
   "newApp.previewDemo": "Preview demo",
+  "newApp.recommended": "RECOMMENDED",
   "newApp.runtimeLabel": "Runtime",
-  "newApp.runtimeOptionClassical": "Classical",
-  "newApp.runtimeOptionNew": "Recommend",
+  "newApp.runtimeOptionClassical": "Classic",
+  "newApp.runtimeOptionClassicalDescription": "Classic runtime for compatibility, without Skill support",
+  "newApp.runtimeOptionNew": "Sandboxed",
+  "newApp.runtimeOptionNewDescription": "Secure runtime with Skill support",
   "newApp.showTemplates": "I want to choose from a template",
   "newApp.startFromBlank": "Create from Blank",
   "newApp.startFromTemplate": "Create from Template",
