--- a/web/i18n/zh-Hans/app.json
+++ b/web/i18n/zh-Hans/app.json
@@ -173,9 +173,12 @@
   "newApp.noTemplateFoundTip": "请尝试使用不同的关键字进行搜索。",
   "newApp.optional": "可选",
   "newApp.previewDemo": "预览 Demo",
-  "newApp.runtimeLabel": "Runtime",
-  "newApp.runtimeOptionClassical": "Classical",
-  "newApp.runtimeOptionNew": "推荐",
+  "newApp.recommended": "推荐",
+  "newApp.runtimeLabel": "运行时",
+  "newApp.runtimeOptionClassical": "经典版",
+  "newApp.runtimeOptionClassicalDescription": "经典运行时，兼容性好，不支持 Skill",
+  "newApp.runtimeOptionNew": "沙箱版",
+  "newApp.runtimeOptionNewDescription": "安全运行时，支持 Skill",
   "newApp.showTemplates": "我想从范例模板中选择",
   "newApp.startFromBlank": "创建空白应用",
   "newApp.startFromTemplate": "从应用模板创建",
