feat(app): update default runtime mode and adjust runtime selection component styling

--- a/web/i18n/en-US/app.json
+++ b/web/i18n/en-US/app.json
@@ -176,10 +176,10 @@
   "newApp.previewDemo": "Preview demo",
   "newApp.recommended": "RECOMMENDED",
   "newApp.runtimeLabel": "Runtime",
-  "newApp.runtimeOptionClassical": "Classic",
-  "newApp.runtimeOptionClassicalDescription": "Classic runtime for compatibility, without Skill support",
-  "newApp.runtimeOptionNew": "Sandboxed",
-  "newApp.runtimeOptionNewDescription": "Secure runtime with Skill support",
+  "newApp.runtimeOptionClassic": "Classic",
+  "newApp.runtimeOptionClassicDescription": "Classic runtime for compatibility, without Skill support",
+  "newApp.runtimeOptionSandboxed": "Sandboxed",
+  "newApp.runtimeOptionSandboxedDescription": "Secure runtime with Skill support",
   "newApp.showTemplates": "I want to choose from a template",
   "newApp.startFromBlank": "Create from Blank",
   "newApp.startFromTemplate": "Create from Template",
