--- a/web/i18n/ja-JP/app.json
+++ b/web/i18n/ja-JP/app.json
@@ -175,10 +175,10 @@
   "newApp.previewDemo": "デモをプレビュー",
   "newApp.recommended": "推奨",
   "newApp.runtimeLabel": "ランタイム",
-  "newApp.runtimeOptionClassical": "クラシック",
-  "newApp.runtimeOptionClassicalDescription": "互換性のあるクラシックランタイム、Skill非対応",
-  "newApp.runtimeOptionNew": "サンドボックス",
-  "newApp.runtimeOptionNewDescription": "Skill対応のセキュアランタイム",
+  "newApp.runtimeOptionClassic": "クラシック",
+  "newApp.runtimeOptionClassicDescription": "互換性のあるクラシックランタイム、Skill非対応",
+  "newApp.runtimeOptionSandboxed": "サンドボックス",
+  "newApp.runtimeOptionSandboxedDescription": "Skill対応のセキュアランタイム",
   "newApp.showTemplates": "テンプレートから選択したい",
   "newApp.startFromBlank": "最初から作成",
   "newApp.startFromTemplate": "テンプレートから作成",
