--- a/web/i18n/zh-Hans/app.json
+++ b/web/i18n/zh-Hans/app.json
@@ -175,10 +175,10 @@
   "newApp.previewDemo": "预览 Demo",
   "newApp.recommended": "推荐",
   "newApp.runtimeLabel": "运行时",
-  "newApp.runtimeOptionClassical": "经典版",
-  "newApp.runtimeOptionClassicalDescription": "经典运行时，兼容性好，不支持 Skill",
-  "newApp.runtimeOptionNew": "沙箱版",
-  "newApp.runtimeOptionNewDescription": "安全运行时，支持 Skill",
+  "newApp.runtimeOptionClassic": "经典版",
+  "newApp.runtimeOptionClassicDescription": "经典运行时，兼容性好，不支持 Skill",
+  "newApp.runtimeOptionSandboxed": "沙箱版",
+  "newApp.runtimeOptionSandboxedDescription": "安全运行时，支持 Skill",
   "newApp.showTemplates": "我想从范例模板中选择",
   "newApp.startFromBlank": "创建空白应用",
   "newApp.startFromTemplate": "从应用模板创建",
